k8s/carbon-footprint-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carbon-footprint-app
  namespace: fonteyn-dev
spec:
  selector:
    app: carbon-footprint-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
