k8s/carbon-footprint-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carbon-footprint-app
  namespace: fonteyn-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: carbon.fonteyn.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carbon-footprint-app
                port:
                  number: 80
